fix sidebar width on small viewports

--- a/app/react/App/scss/fixes.scss
+++ b/app/react/App/scss/fixes.scss
@@ -22,7 +22,8 @@ header {
     width: 100%;
   }
   .side-panel {
-    width: 400px;
+    width: 80%;
+    max-width: 360px;
   }
 }
 
